--- a/app/src/main/res/layout/item_tow.xml
+++ b/app/src/main/res/layout/item_tow.xml
@@ -4,6 +4,7 @@
               android:padding="@dimen/activity_horizontal_margin"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">
+
     <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -14,4 +15,8 @@
               android:layout_height="wrap_content"
               android:text="adf"
               android:id="@+id/comment"/>
+    <TextView android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="adf"
+              android:id="@+id/contact"/>
 </LinearLayout>
